Criação dos arquivos e realização do exercicio1 do dia 3

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   color: #ff019a;
   text-align: center;
 }
+
 h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -17,6 +18,38 @@ em {
   font-size: 16px;
   line-height: 2em;
 }
+
+.about {
+  padding: 0 25% 0 25%;
+  text-align: center;
+  margin: 100px 0 100px 0;
+}
+.about p {
+  float: right;
+  padding-top: 15%;
+  width: 200px;
+}
+.about img {
+  float: left;
+  padding: 10px;
+  background-color: aqua;
+}
+#skills {
+  clear: both;
+}
 hr {
   border: 1px dashed #ff019a;
+  clear: both;
+}
+hr:first-of-type {
+  margin-top: 400px;
+}
+
+li {
+  list-style: none;
+}
+
+.skills li:nth-child(odd) {
+  text-decoration: underline;
+  font-style: italic;
 }
